<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activity.FormularioAvaliacaoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_formulario_avaliacao_txt_input_layout_avaliacao"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_avaliacao_edtxt_avaliacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/avaliacao"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/activity_formulario_avaliacao_txt_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/tipo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/fragment_avaliacao_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            android:id="@+id/activity_formulario_avaliacao_txt_data_entrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/data_entrega"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_formulario_avaliacao_txt_input_layout_data"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_formulario_avaliacao_edtxt_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/data"
                    android:inputType="date"
                    android:maxLength="10"
                    android:selectAllOnFocus="true"
                    android:text="@string/format_date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_formulario_avaliacao_txt_input_layout_hora"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_formulario_avaliacao_edtxt_hora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hora"
                    android:inputType="time"
                    android:maxLength="5"
                    android:selectAllOnFocus="true"
                    android:text="@string/format_hora" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_formulario_avaliacao_txt_input_layout_nota"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_formulario_avaliacao_edtxt_nota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nota"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_sem_nota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/sem_nota" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>