<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ListaAvaliacoesActivity">

    <TextView
        android:id="@+id/activity_lista_avaliacoes_txt_disciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/disciplina"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:textSize="25sp"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_lista_avaliacoes_txt_disciplina" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintBottom_toTopOf="@+id/activity_lista_avaliacoes_recyclerView"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:text="@string/professor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:text="@string/turma" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:text="@string/ano_semestre" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:text="@string/carga_horaria" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:text="@string/periodo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:text="@string/situacao" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_lista_avaliacoes_txt_professor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professor"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/activity_lista_avaliacoes_txt_turma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/turma"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/activity_lista_avaliacoes_txt_ano_semestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ano_semestre"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/activity_lista_avaliacoes_txt_carga_horaria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carga_horaria"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/activity_lista_avaliacoes_txt_periodo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/periodo"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/activity_lista_avaliacoes_txt_situacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/situacao"
                android:textAlignment="viewEnd" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/activity_lista_avaliacoes_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_lista_avaliacoes_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:listitem="@layout/item_avaliacao" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_lista_avaliacoes_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/purple_500"
        android:contentDescription="@string/fab_avaliacoes_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>