<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="8dp"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/cardView_disciplina">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:id="@+id/item_disciplina_disciplina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/disciplina"
                android:textAllCaps="true"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_disciplina_situacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/situacao"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="3">

            <TextView
                android:id="@+id/item_disciplina_professor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/professor"
                android:textSize="18sp"
                app:drawableTopCompat="@drawable/professor"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>