<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.tab.PerfilTabFragment">

    <!--    imagem-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/fragment_perfil_tab_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/perfil" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:text="@string/curso" />

        <TextView
            android:id="@+id/fragment_perfil_tab_curso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/curso"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:text="@string/email" />

        <TextView
            android:id="@+id/fragment_perfil_tab_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/email"
            android:textSize="20sp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>